[package]
name = "nino"
description = "Scalable JS Platform"
authors = ["ScaleFocus"]
version = "1.0.0"
edition = "2021"
license = "BSD"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
deno_runtime = "0.171.0"
deno_core = "0.294.0"
postgres = "0.19.8"
tokio-postgres = "0.7.11"
deadpool-postgres = "0.12.1"
async-std = "1.12.0"
async-h1 = "2.3.4"
async-channel = "2.3.1"
reqwest = "0.12.5"
http-types = "2.12.0"
serde = "1.0.204"
chrono = "0.4.38"
bcrypt = "0.15.1"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.12.6"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
