[package]
name = "nino"
description = "Scalable JS Platform"
authors = ["ScaleFocus"]
version = "1.0.0"
edition = "2021"
license = "BSD"

[dependencies]
#### deno
tokio = { version = "1.47.1", features = ["full"] }
deno_core = "0.355.0"
deno_error = "0.7.0"
anyhow = "1.0.99"

#### inspector
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["tokio", "server", "server-auto"] }
fastwebsockets =  { version = "0.10.0", features = ["upgrade", "unstable-split"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
uuid = { version = "1.18.1", features = ["v4"] }
http = "1.3.1"
http-body-util = "0.1.3"

#### nino
postgres = "0.19.9"
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.1"
async-std = "1.13.0"
async-h1 = "2.3.4"
async-channel = "2.3.1"
reqwest = "0.12.5"
http-types = "2.12.0"
serde = "1.0.217"
chrono = "0.4.39"
bcrypt = "0.16.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
base64 = "0.22.1"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
