[package]
name = "deno_inspector_test"
version = "0.1.0"
edition = "2021"

[dependencies]
#### deno
tokio = { version = "1.43.0", features = ["full"] }
deno_core = "0.334.0"
deno_error = "0.5.6"
anyhow = "1.0.95"

#### inspector
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server", "server-auto"] }
fastwebsockets =  { version = "0.10.0", features = ["upgrade", "unstable-split"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
uuid = { version = "1.12.1", features = ["v4"] }
http = "1.2.0"
http-body-util = "0.1.2"

