[package]
name = "deno_inspector_test"
version = "0.1.0"
edition = "2021"

[dependencies]
#### deno
tokio = { version = "1.47.1", features = ["full"] }
deno_core = "0.355.0"
deno_error = "0.7.0"
anyhow = "1.0.99"

#### inspector
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["tokio", "server", "server-auto"] }
fastwebsockets =  { version = "0.10.0", features = ["upgrade", "unstable-split"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
uuid = { version = "1.18.1", features = ["v4"] }
http = "1.3.1"
http-body-util = "0.1.3"

